--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-  --clr-main: #5b97b5;
-  --clr-main-light: #f4fbff;
-  --clr-white: #ececec;
-  --clr-gray: #e2e2e2;
+  --clr-main: #606676;
+  --clr-main-light: #fef3e2;
+  --clr-white: #fef3e2;
+  --clr-gray: #bec6a0;
   --clr-red: #961818;
 }
 
